src/objects/Contract_Specialists_Assigned__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>ContactId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DivisionCode__c</fullName>
        <label>DivisionCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Contract Specialists Assigned</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ContactId__c</columns>
        <columns>DivisionCode__c</columns>
        <columns>AccountId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Specialists Assigned Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Specialists Assigned</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>